# fdl

./: .gitignore  .tagpr  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml  release.yml  tagpr.yml  test.yml
docs/: CNAME  index.md  roadmap.md
docs/cli/: index.md
docs/concepts/: configuration.md  why-fdl.md
docs/getting-started/: installation.md  quickstart.md  why-fdl.md
docs/guide/: configuration.md  working-with-data.md
docs/integrations/: dagster.md  dbt.md  dlt.md
docs/reference/: cli.md  python-api.md
docs/resources/: examples.md  known-issues.md
src/fdl/: __init__.py  checkpoint.py  cli.py  clone.py  config.py  config_schema.py  console.py  ducklake.py  gc.py  init_project.py  init_v11.py  maintenance.py  meta.py  metadata.py  metadata_schema.py  prune.py  publish.py  pull.py  push.py  run.py  s3.py  serve.py  upload.py
tests/: conftest.py  test_api.py  test_config.py  test_config_v11.py  test_ducklake.py  test_ducklake_v11.py  test_find_project_dir.py  test_init.py  test_init_module.py  test_init_v11.py  test_meta.py  test_s3.py  test_serve.py
tests/integration/: conftest.py  test_checkpoint.py  test_clone.py  test_concurrency.py  test_config.py  test_convert.py  test_duckdb.py  test_init.py  test_maintenance.py  test_postgres.py  test_prune.py  test_publish.py  test_pull.py  test_push.py  test_run.py  test_run_v11.py  test_s3.py  test_serve.py  test_sql.py  test_sync.py  test_wal.py
