[project]
name = "frozen-ducklake"
version = "0.6.0"
description = "Frozen DuckLake CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "flo8s" }]
dependencies = [
    "boto3>=1.35",
    "duckdb>=1.4.0,<1.5.0",
    "typer>=0.15",
]

[project.urls]
Homepage = "https://fdl.flo8s.com/"
Documentation = "https://fdl.flo8s.com/"
Repository = "https://github.com/flo8s/fdl"
Changelog = "https://fdl.flo8s.com/changelog/"

[project.scripts]
fdl = "fdl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdl"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
major_on_zero = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "moto[s3]>=5.0",
    "zensical>=0.0.29",
    "mkdocstrings[python]>=1.0.3",
]
